# bibliotheque_audio

./: CMakeLists.txt  README.md  album.cpp  album.h  audio_player.cpp  audio_player.h  authManager.h  main.cpp  playlist.cpp  playlist.h  song.cpp  user_account.h  user_interface.cpp  user_interface.h
database/: database.sql
include/: audio_player.h  authManager.h  song.h
src/: audio_player.cpp
